syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


option csharp_namespace = "WeatherParser.GrpcService.Services";

package WeatherDataProtoGismeteo;

service WeatherDataProtoGismeteo {
  rpc SaveWeatherData (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetAllWeatherDataByDay (WeatherDataRequest) returns (WeatherDataGetResponse) {}
  rpc GetFirstAndLastDate(SiteID) returns (FirstLastDates) {}
  rpc GetSites(google.protobuf.Empty) returns (SitesList) {}
}

message WeatherDataRequest{
  string siteID = 1;
  google.protobuf.Timestamp date = 2;
}

message SiteID{
	string ID = 1;
}

message FirstLastDates{
	google.protobuf.Timestamp FirstDate = 1;
	google.protobuf.Timestamp LastDate = 2;
}

message Site{
	string SiteId = 1;
	string SiteName = 2;
}

message SitesList{
	repeated Site Sites = 1;
}

message WeatherDataProto{
	google.protobuf.Timestamp Date = 1;
	Temperatures Temperatures = 2;
	Pressures Pressures = 3;
	Humidities Humidities = 4;
	WindSpeeds WindSpeeds = 5;
	WindDirections WindDirections = 6;
}

message Temperatures{
	repeated double Temperature = 1;
}

message Pressures{
	repeated int32 Pressure = 1;
}

message Humidities{
	repeated int32 Humidity = 1;
}

message WindSpeeds{
	repeated int32 WindSpeed = 1;
}

message WindDirections{
	repeated google.protobuf.StringValue WindDirection = 1;
}

message WeatherDataList{
	repeated WeatherDataProto WeatherList = 1;
}

message TargetDateWeather {
  google.protobuf.Timestamp TargetDate = 1;
  WeatherDataList Weather = 2;
}

message WeatherDataGetResponse {
	repeated TargetDateWeather WeatherData = 1;
}
